@@ -64,7 +64,6 @@ HEADERS	+= config.h \
 	aboutdialog.h \
 	basegui.h \
 	baseguiplus.h \
-	floatingcontrol.h \
 	floatingwidget.h \
 	widgetactions.h \
 	defaultgui.h \
@@ -124,7 +123,6 @@ SOURCES	+= version.cpp \
 	aboutdialog.cpp \
 	basegui.cpp \
 	baseguiplus.cpp \
-	floatingcontrol.cpp \
 	floatingwidget.cpp \
 	widgetactions.cpp \
 	defaultgui.cpp \
